-
Type:
Bug
-
Status: Resolved
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: Impala 2.2, Impala 2.1.2
-
Fix Version/s: Impala 2.6.0
-
Component/s: Backend
-
Labels:
-
Environment:CentOS 6 (2.6.32-431.17.1.el6.centos.plus.x86_64)
CDH 5.3.2
-
Target Version:
parse_url() returns incorrect values for HOST and USERINFO when '@' is present in the query string.
Example:
> select parse_url('http://host.com/page.htm?val=@not_the_host', 'HOST');
Query: select parse_url('http://host.com/page.htm?val=@not_the_host', 'HOST')
not_the_host> select parse_url('http://host.com/page.htm?val=not_the_host', 'HOST');
Query: select parse_url('http://host.com/page.htm?val=not_the_host', 'HOST')
host.com> select parse_url('http://host.com/page.htm?val=@not_the_host', 'USERINFO');
Query: select parse_url('http://host.com/page.htm?val=@not_the_host', 'USERINFO')
host.com/page.htm?val=> select parse_url('http://host.com/page.htm?val=not_the_host', 'USERINFO');
Query: select parse_url('http://host.com/page.htm?val=not_the_host', 'USERINFO')
NULL
WARNINGS: UDF WARNING: Could not parse URL: http://host.com/page.htm?val=not_the_host